array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var compte = 0
  for (i <- 0 to (4)) {
    var a = num[i]
    var b = num[i+1]
    if (a<b) {
      compte = compte +1
    }
  }
  return compte
}